# zhin

./: .gitignore  .roomodes  README.md  config.toml  dibb_bill.html  nmroster.html  nnc_press.html  nnop_roster.html  pyproject.toml
docs/: poc2.md  progress_tracker.md  project_plan.md  theme.asciidoc
src/: color_logger.py  config.py  logger.py  main.py  progress.py  queue_system.py
src/processing/: chunking.py  metadata_extraction.py  pipeline.py  text_extraction.py
src/scrapers/: courts_scrapers.py  dibb_scrapers.py  navajonationcouncil_scrapers.py  nnc_press_scrapers.py  nndoj_scrapers.py  nnols_scrapers.py  opvp_scrapers.py
tests/processing/: test_text_extraction.py
tests/scrapers/: test_courts_scrapers.py  test_dibb_scrapers.py  test_download.py  test_navajonationcouncil_scrapers.py  test_nnols_scrapers.py
